subprojects {
	apply plugin: 'java'

	group = 'org.cph.crypto'
	version = app_version

	sourceCompatibility = 1.10
	targetCompatibility = 1.10

	repositories {
		jcenter()
	}
	afterEvaluate {
		repositories {
			jcenter()
		}

		compileJava {
			inputs.property("moduleName", moduleName)
			doFirst {
				options.compilerArgs = [
					'--module-path', classpath.asPath,
				]
				classpath = files()
			}
		}

		compileTestJava {
			inputs.property("moduleName", moduleName)
			doFirst {
				options.compilerArgs = [
					'--module-path', classpath.asPath,
					'--add-modules', 'org.junit.jupiter.api',
					'--add-reads', "$moduleName=org.junit.jupiter.api",
					'--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
				]
				classpath = files()
			}
		}

		test {
			inputs.property("moduleName", moduleName)
			doFirst {
				jvmArgs = [
					'--module-path', classpath.asPath,
					'--add-modules', 'ALL-MODULE-PATH',
					'--add-reads', "$moduleName=org.junit.jupiter.api",
					'--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
				]
				classpath = files()
			}
		}
	}
}
